k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
  labels:
    name: data
